hphp/test/slow/reified_generics/param-verification-5.php.expectf
yep
yep

Catchable fatal error: Argument 1 passed to f() must be an instance of ?B<int>, B<?int> given in %s on line 8
